Allow [!] to be anywhere in list.

--- a/dotfiles/.mindtree.conf
+++ b/dotfiles/.mindtree.conf
@@ -7,12 +7,12 @@ subtree()
     local output
     local number
     preprocess=$(sed '/^#/d' <  ~/.mindtree)
-    output=$( echo "$preprocess" | tr '\n' , | grep -o "\[[0-9!]\]$1.*" | tr , '\n' )
+    output=$( echo "$preprocess" | tr '\n' , | grep -o "\[[0-9!@]\]$1.*" | tr , '\n' )
 
     # Find the number symbol associated with this: 1
     number=$(echo "$output" | head -1| cut -c2)
 
-    if [ "$number" != "!" ]; then
+    if [ "$number" != "!" ] && [ "$number" != "@" ]; then
         # echo $number
         symbol="["
         for i in $(seq "$number")
@@ -25,8 +25,7 @@ subtree()
         bottom=$(echo "$output"| tail -n +2)
         # The chunk will descend into
         chunk="$(echo "$bottom" | awk -v sym="$symbol" '$0 ~ sym {exit} {print}'|cat)"
-
-        chunk=$( echo "$chunk" | sed '/^\[!\]/d')
+        chunk=$( echo "$chunk" | sed '/^\[(!|@)\]/d')
 
         # Debug to see what it found
         echo -e "$(echo "$output"|head -1)" "\n" "$chunk"
@@ -50,10 +49,10 @@ treetop()
     # echo $number
     local fzf_output
     export blorp
-    fzf_output=$(echo "$preprocess" | grep -E "^\[1\]|^\[!\]" | tr -d '\t '|cut -c4-|fzf-tmux -p --cycle --preview 'source ~/.mindtree.conf; subtree_preview {}') # --preview-window right:70% --preview 'echo "$output"')
+    fzf_output=$(echo "$preprocess" | grep -E "^\[1\]|^\[(!|@)\]" | tr -d '\t '|cut -c4-|fzf-tmux -p --cycle --preview 'source ~/.mindtree.conf; subtree_preview {}') # --preview-window right:70% --preview 'echo "$output"')
     
     local number
-    number=$( echo "$preprocess" | grep -Eo "\[[0-9!]\]$fzf_output" | head -c 3)
+    number=$( echo "$preprocess" | grep -Eo "\[[0-9!@]\]$fzf_output" | head -c 3)
     if [ -z "$number" ]; then
         number="[!]"
     fi
@@ -102,7 +101,7 @@ fzf_looper()
     number=$(echo "$first" | head -1| cut -c2)
 
     input="$first"
-    while [ "$number" != "!" ]
+    while [ "$number" != "!" ] && [ "$number" != "@" ]
     do
         output=$(fzf_braintree "$input")
         # echo "output: $output"
@@ -121,6 +120,7 @@ decoder()
 {
 case $1 in
     .bashrc) echo "~/.bashrc";;
+    sample) echo "SAMPLE";;
     .tmux.conf) echo "~/.tmux.conf";;
     .mindtree) echo "~/.mindtree";;
     mindtree.conf) echo "~/.mindtree.conf";;
