Fix checksum to be less intrusive

--- a/dotfiles/.mindtree.conf
+++ b/dotfiles/.mindtree.conf
@@ -81,11 +81,9 @@ mindtree()
     local chksum
     chksum="$(cat ~/.bashrc ~/.mindtree ~/.mindtree.conf ~/.bashpersonal |md5sum)"    
     if ! grep -q "$chksum" ~/.chksum; then
-        # echo "mismathc"
-        echo "$chksum" > ~/.chksum  
-        echo -e "Update bashrc" | fzf-tmux -p --cycle > /dev/null
-        echo -e "\nUpdating bashrc\n" > "$(tty)"
-        refrc 
+      echo -e "Update bashrc" | fzf-tmux -p --cycle > /dev/null
+      refrc $chksum
+      exit
     fi
 
     echo "$(fzf_looper)"
