Refresh activity to update status more quickly

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -88,13 +88,13 @@ setw -g pane-base-index 1
 
 unbind C-b
 set -g prefix C-a
-set -g visual-silence on
+set -g visual-silence on #both
 set -g monitor-activity off
 set -g visual-activity on
 
-bind F2 set -w monitor-activity on
-bind F3 set -w monitor-silence 20
-bind F4 "set -w monitor-activity off; set -w monitor-silence 0"
+bind F2 "set -w monitor-silence 0; set -w monitor-activity; refresh-client -S" # toggle each time
+bind F3 "set -w monitor-activity off; set -w monitor-silence 20; refresh-client -S"
+bind F4 "set -w monitor-activity off; set -w monitor-silence 0; refresh-client -S"
 
 #tmux setw monitor silence 30 (or 0)
 #tmux show-options -g (or -w)
